--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -33,7 +33,7 @@
 	     Applicatio-specific strings
 	     *************************** -->
 	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
-    <string name="app_name">OI Gestore File</string>
+    <string name="app_name">Gestore File</string>
     
     <string name="menu_new_folder">Nuova cartella</string>
     
