--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="menu_open">Open</string>
     <string name="menu_move">Move</string>
     <string name="menu_copy">Copy</string>
+    <string name="menu_backup">Backup all</string>
+    <string name="menu_backset">Backup App</string>
     <string name="menu_details">Details</string>
     <string name="menu_more">More</string>
     <string name="menu_compress">Compress (ZIP)</string>
